--- a/T007_input_library/T007_input.css
+++ b/T007_input_library/T007_input.css
@@ -119,9 +119,8 @@
 .t007-input-field *::before {
   box-sizing: border-box;
   font-family: var(--t007-input-font-family);
-  transition-property:
-    transform, filter, background-color, color, border, right, left, top,
-    bottom, width, height, font-size, scale;
+  transition-property: transform, filter, background-color, color, border, right,
+    left, top, bottom, width, height, font-size, scale;
   transition-duration: 150ms;
   transition-timing-function: ease;
 }
@@ -151,18 +150,18 @@
   ),
 .t007-input-field:where(
     :has(
-      .t007-input:is(
-          [data-filled],
-          :-webkit-autofill,
-          :not(:placeholder-shown):where(
-              :not(select):not([type="date"]):not([type="time"]):not(
-                  [type="datetime-local"]
-                ):not([type="month"]):not([type="week"]):not(
-                  [type="color"]
-                ):not([type="range"]):not([type="file"])
-            )
-        )
-    )
+        .t007-input:is(
+            [data-filled],
+            :-webkit-autofill,
+            :not(:placeholder-shown):where(
+                :not(select):not([type="date"]):not([type="time"]):not(
+                    [type="datetime-local"]
+                  ):not([type="month"]):not([type="week"]):not(
+                    [type="color"]
+                  ):not([type="range"]):not([type="file"])
+              )
+          )
+      )
   ) {
   --t007-input-current-color: var(--t007-input-filled-color);
   --t007-input-current-label-color: var(--t007-input-filled-label-color);
@@ -326,9 +325,8 @@
   max-width: calc(100% - 0.75rem);
   border-left: none !important;
   border-right: none !important;
-  transition-property:
-    border-bottom, transform, filter, background-color, color, right, left, top,
-    bottom, width, height, font-size, scale;
+  transition-property: border-bottom, transform, filter, background-color, color,
+    right, left, top, bottom, width, height, font-size, scale;
 }
 
 .t007-input-field:has(.t007-input-icon) .t007-input-outline-notch {
@@ -467,8 +465,7 @@
   .t007-input-floating-label.t007-input-shake {
   transform: translateY(
       calc(
-        -1 *
-          ((var(--t007-input-height) / 2) + (var(--t007-input-font-size) / 2))
+        -1 * ((var(--t007-input-height) / 2) + (var(--t007-input-font-size) / 2))
       )
     )
     translateX(0.25rem);
@@ -529,8 +526,7 @@
     (
         (var(--t007-input-height) / 2) -
           ((var(--t007-input-font-size) / 1.25) / 2)
-      ) -
-      ((var(--t007-input-floating-label-font-size) * 1.3) / 2) - 1px
+      ) - ((var(--t007-input-floating-label-font-size) * 1.3) / 2) - 1px
   );
 }
 
@@ -570,10 +566,8 @@
 :where(
     .t007-input[type="file"].t007-input-image-selected
   )::file-selector-button {
-  background:
-    center/contain no-repeat var(--t007-input-image-src),
-    linear-gradient(black, black),
-    black;
+  background: center/contain no-repeat var(--t007-input-image-src),
+    linear-gradient(black, black), black;
   color: transparent;
   padding-block: var(--t007-input-sb-padding-block);
   border: none;
@@ -693,8 +687,9 @@
   opacity: 1;
 }
 
-.t007-input-helper-line:has(.t007-input-helper-text.t007-input-show)
-  .t007-input-helper-text[data-violation="none"] {
+.t007-input-helper-line:has(.t007-input-show) [data-violation="none"],
+.t007-input-helper-line:not(:has(.t007-input-show, [data-violation="none"]))
+  .t007-input-scroll-assist {
   opacity: 0;
 }
 
@@ -895,7 +890,7 @@
 }
 
 .t007-input-checkbox-tag {
-  top: -15%;
+  top: -14.25%;
   width: 35%;
   height: 70%;
   border: solid var(--t007-input-checkmark-color);
