--- a/T007_toast_library/T007_toast.css
+++ b/T007_toast_library/T007_toast.css
@@ -1,7 +1,5 @@
 :where(:root) {
   --t007-toast-font-family: inherit;
-  --t007-toast-unit: 1rem;
-  --t007-toast-type-color: whitesmoke;
   --t007-toast-info-color: #3498db;
   --t007-toast-success-color: #27ae60;
   --t007-toast-error-color: #e74c3c;
@@ -10,7 +8,26 @@
   --t007-toast-background-blur: 10px;
   --t007-toast-animation-duration: 250ms;
   --t007-toast-animation-timing-function: cubic-bezier(0.68, -0.55, 0.27, 1.55);
-  --t007-toast-margin: 8px;
+  --t007-toast-container-position: fixed;
+  --t007-toast-border: unset;
+  --t007-toast-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.06),
+    0 6px 16px rgba(0, 0, 0, 0.08);
+  --t007-toast-icon-line-height: 1.25;
+  --t007-toast-text-stroke: 0.2px rgba(0, 0, 0, 0.45);
+  --t007-toast-text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.45);
+  --t007-toast-max-lines: 7;
+  --t007-toast-x-color: red;
+}
+
+:where(:root, .t007-toast-container) {
+  --t007-toast-type-color: whitesmoke;
+  --t007-toast-progress-background: var(--t007-toast-type-color);
+  --t007-toast-progress-backdrop-background: rgb(
+    from var(--t007-toast-type-color) r g b/.2
+  );
+  --t007-toast-font-color: var(--t007-toast-type-color);
+  --t007-toast-unit: 1rem;
+  --t007-toast-container-margin: 8px;
   --t007-toast-min-width: unset;
   --t007-toast-width: calc(var(--t007-toast-unit) * 20);
   --t007-toast-max-width: 100%;
@@ -18,34 +35,21 @@
   --t007-toast-height: fit-content;
   --t007-toast-max-height: calc(var(--t007-toast-unit) * 8.5);
   --t007-toast-padding: calc(var(--t007-toast-unit) / 2.25);
-  --t007-toast-border: unset;
   --t007-toast-border-radius: calc(var(--t007-toast-unit) / 3);
-  --t007-toast-box-shadow:
-    0 2px 4px rgba(0, 0, 0, 0.06), 0 6px 16px rgba(0, 0, 0, 0.08);
   --t007-toast-progress-height: calc(var(--t007-toast-unit) / 4);
-  --t007-toast-progress-background: var(--t007-toast-type-color);
-  --t007-toast-progress-backdrop-background: rgb(
-    from var(--t007-toast-type-color) r g b/.2
-  );
   --t007-toast-image-width: calc(var(--t007-toast-unit) * 3.5);
   --t007-toast-image-height: calc(var(--t007-toast-unit) * 3.5);
   --t007-toast-image-border-radius: calc(var(--t007-toast-unit) / 5);
   --t007-toast-icon-width: calc(var(--t007-toast-unit) * 1.5);
   --t007-toast-icon-height: calc(var(--t007-toast-unit) * 1.5);
   --t007-toast-icon-font-size: calc(var(--t007-toast-icon-height) * 0.85);
-  --t007-toast-icon-line-height: 1.25;
-  --t007-toast-font-color: var(--t007-toast-type-color);
   --t007-toast-font-size: calc(var(--t007-toast-unit) / 1.05);
   --t007-toast-font-weight: inherit;
-  --t007-toast-text-stroke: 0.2px rgba(0, 0, 0, 0.45);
-  --t007-toast-text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.45);
-  --t007-toast-max-lines: 7;
   --t007-toast-x-size: calc(var(--t007-toast-unit) * 1.75);
-  --t007-toast-x-color: red;
 }
 
-:root {
-  --t007-toast-flex-direction: column;
+:root, .t007-toast-container {
+  --t007-toast-container-flex-direction: column;
 }
 
 @keyframes xSlideBounceIn {
@@ -102,17 +106,17 @@
 }
 
 .t007-toast-container {
-  position: fixed;
-  margin: var(--t007-toast-margin);
-  max-width: calc(100dvw - (var(--t007-toast-margin) * 2));
+  position: var(--t007-toast-container-position);
+  margin: var(--t007-toast-container-margin);
+  max-width: calc(100% - (var(--t007-toast-container-margin) * 2));
   display: flex;
-  flex-direction: var(--t007-toast-flex-direction);
+  flex-direction: var(--t007-toast-container-flex-direction);
   gap: 0.5rem;
   z-index: 2147483647;
 }
 
 .t007-toast-container.newest-on-top {
-  --t007-toast-flex-direction: column-reverse;
+  --t007-toast-container-flex-direction: column-reverse;
 }
 
 .t007-toast-container[data-position^="top-"] {
@@ -156,6 +160,12 @@
   height: var(--t007-toast-height);
   max-height: var(--t007-toast-max-height);
   padding: var(--t007-toast-padding);
+  color: var(--t007-toast-font-color);
+  text-align: left;
+  font-size: var(--t007-toast-font-size);
+  font-weight: var(--t007-toast-font-weight);
+  -webkit-text-stroke: var(--t007-toast-text-stroke);
+  text-shadow: var(--t007-toast-text-shadow);
   background: var(--t007-toast-background);
   border: var(--t007-toast-border);
   border-radius: var(--t007-toast-border-radius);
@@ -163,9 +173,7 @@
   -webkit-backdrop-filter: blur(var(--t007-toast-background-blur));
   backdrop-filter: blur(var(--t007-toast-background-blur));
   overflow: hidden;
-  transition:
-    transform 300ms ease,
-    opacity 300ms ease;
+  transition: transform 300ms ease, opacity 300ms ease;
   will-change: transform, opacity;
   animation-timing-function: var(--t007-toast-animation-timing-function);
   animation-fill-mode: forwards;
@@ -232,7 +240,7 @@
 }
 
 .t007-toast.progress::before,
-.t007-toast.progress::after { 
+.t007-toast.progress::after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -246,7 +254,7 @@
   background: var(--t007-toast-progress-background);
 }
 
-.t007-toast.progress::after { 
+.t007-toast.progress::after {
   width: 100%;
   background: var(--t007-toast-progress-backdrop-background);
 }
@@ -315,12 +323,6 @@
   -webkit-line-clamp: var(--t007-toast-max-lines);
   line-clamp: var(--t007-toast-max-lines);
   word-break: break-word;
-  text-align: left;
-  color: var(--t007-toast-font-color);
-  font-size: var(--t007-toast-font-size);
-  font-weight: var(--t007-toast-font-weight);
-  -webkit-text-stroke: var(--t007-toast-text-stroke);
-  text-shadow: var(--t007-toast-text-shadow);
   margin: 0;
   z-index: 1;
 }
