--- a/T007_dialog_library/T007_dialog.css
+++ b/T007_dialog_library/T007_dialog.css
@@ -12,8 +12,7 @@
   --t007-dialog-content-padding-block: 1.5rem;
   --t007-dialog-border-radius: 1rem;
   --t007-dialog-border: 0.05rem solid rgba(255, 255, 255, 0.25);
-  --t007-dialog-box-shadow:
-    2px 2px 6px rgba(0, 0, 0, 0.5), -2px -2px 6px rgba(0, 0, 0, 0.5);
+  --t007-dialog-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5), -2px -2px 6px rgba(0, 0, 0, 0.5);
   --t007-dialog-backdrop-background: rgba(0, 0, 0, 0.2);
   --t007-dialog-backdrop-blur: blur(6px);
   --t007-dialog-message-font-size: 0.9rem;
@@ -97,12 +96,14 @@ body:has(.t007-dialog[open]) {
   border-radius: var(--t007-dialog-border-radius);
 }
 
-.t007-dialog, .t007-dialog form {
+.t007-dialog,
+.t007-dialog form {
   flex-direction: column;
   gap: var(--t007-dialog-gap);
 }
 
-.t007-dialog[open], .t007-dialog form {
+.t007-dialog[open],
+.t007-dialog form {
   display: flex;
 }
 
