--- a/T007_input_library/T007_input_builder.css
+++ b/T007_input_library/T007_input_builder.css
@@ -1,7 +1,5 @@
 html {
-  font-family:
-    "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans",
-    Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
 
 *,
