bug fixes and promise toasts and enhanced features

--- a/T007_dialog_library/T007_dialog.css
+++ b/T007_dialog_library/T007_dialog.css
@@ -148,6 +148,8 @@ body:has(.t007-dialog[open]) {
 .t007-dialog-bottom-section {
   align-self: flex-end;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
   gap: var(--t007-dialog-button-gap);
 }
 
