--- a/T007_toast_library/T007_toast.css
+++ b/T007_toast_library/T007_toast.css
@@ -12,8 +12,8 @@
   --t007-toast-border: unset;
   --t007-toast-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.06), 0 6px 16px rgba(0, 0, 0, 0.08);
   --t007-toast-icon-line-height: 1.25;
-  --t007-toast-text-stroke: 0.2px rgba(0, 0, 0, 0.45);
-  --t007-toast-text-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.45);
+  --t007-toast-text-stroke: 0.15px rgba(0, 0, 0, 0.35);
+  --t007-toast-text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
   --t007-toast-max-lines: 7;
   --t007-toast-x-color: red;
 }
@@ -21,10 +21,13 @@
 :where(:root, .t007-toast-container) {
   --t007-toast-type-color: whitesmoke;
   --t007-toast-progress-background: var(--t007-toast-type-color);
-  --t007-toast-progress-backdrop-background: rgb(from var(--t007-toast-type-color) r g b/.2);
+  --t007-toast-progress-backdrop-background: rgb(from var(--t007-toast-type-color) r g b/0);
   --t007-toast-font-color: var(--t007-toast-type-color);
   --t007-toast-unit: 1rem;
-  --t007-toast-container-margin: 8px;
+  --t007-toast-container-margin-top: calc(var(--t007-toast-unit) / 2);
+  --t007-toast-container-margin-bottom: calc(var(--t007-toast-unit) / 2);
+  --t007-toast-container-margin-left: calc(var(--t007-toast-unit) / 2);
+  --t007-toast-container-margin-right: calc(var(--t007-toast-unit) / 2);
   --t007-toast-min-width: unset;
   --t007-toast-width: calc(var(--t007-toast-unit) * 20);
   --t007-toast-max-width: 100%;
@@ -33,13 +36,13 @@
   --t007-toast-max-height: calc(var(--t007-toast-unit) * 8.5);
   --t007-toast-padding: calc(var(--t007-toast-unit) / 2.25);
   --t007-toast-border-radius: calc(var(--t007-toast-unit) / 3);
-  --t007-toast-progress-height: calc(var(--t007-toast-unit) / 4);
+  --t007-toast-progress-height: calc(var(--t007-toast-unit) / 5);
   --t007-toast-image-width: calc(var(--t007-toast-unit) * 3.5);
   --t007-toast-image-height: calc(var(--t007-toast-unit) * 3.5);
   --t007-toast-image-border-radius: calc(var(--t007-toast-unit) / 5);
-  --t007-toast-icon-width: calc(var(--t007-toast-unit) * 1.5);
-  --t007-toast-icon-height: calc(var(--t007-toast-unit) * 1.5);
-  --t007-toast-icon-font-size: calc(var(--t007-toast-icon-height) * 0.85);
+  --t007-toast-icon-width: calc(var(--t007-toast-unit) * 1.4);
+  --t007-toast-icon-height: calc(var(--t007-toast-unit) * 1.4);
+  --t007-toast-icon-font-size: calc(var(--t007-toast-icon-height) * 0.8);
   --t007-toast-font-size: calc(var(--t007-toast-unit) / 1.05);
   --t007-toast-font-weight: inherit;
   --t007-toast-x-size: calc(var(--t007-toast-unit) * 1.75);
@@ -94,6 +97,12 @@
     transform: translateY(var(--t-from));
   }
 }
+@keyframes t007-item-expand {
+  from {
+    transform: scale(0);
+    opacity: 0;
+  }
+}
 
 .t007-toast-container,
 .t007-toast-container *,
@@ -105,8 +114,12 @@
 
 .t007-toast-container {
   position: var(--t007-toast-container-position);
-  margin: var(--t007-toast-container-margin);
-  max-width: calc(100% - (var(--t007-toast-container-margin) * 2));
+  margin-top: var(--t007-toast-container-margin-top);
+  margin-bottom: var(--t007-toast-container-margin-bottom);
+  margin-left: var(--t007-toast-container-margin-left);
+  margin-right: var(--t007-toast-container-margin-right);
+  max-width: calc(100% - var(--t007-toast-container-margin-left) - var(--t007-toast-container-margin-right));
+  /* max-height: calc(100% - var(--t007-toast-container-margin-top) - var(--t007-toast-container-margin-bottom)); */
   display: flex;
   flex-direction: var(--t007-toast-container-flex-direction);
   gap: 0.5rem;
@@ -146,8 +159,8 @@
 }
 
 .t007-toast {
-  touch-action: none;
   position: relative;
+  flex-shrink: 0;
   display: flex;
   align-items: center;
   gap: calc(var(--t007-toast-unit) / 2.5);
@@ -179,6 +192,7 @@
   animation-fill-mode: forwards;
   animation-duration: var(--t007-toast-animation-duration);
   animation-name: t007-x-slide-bounce-out;
+  touch-action: none;
 }
 
 .t007-toast:is([data-pointer-type="mouse"], [data-pointer-type="true"]) {
@@ -226,7 +240,7 @@
 .t007-toast:is(.info, .success, .error, .warning) {
   --t007-toast-font-color: var(--t007-toast-type-color);
   --t007-toast-progress-background: var(--t007-toast-type-color);
-  --t007-toast-progress-backdrop-background: rgb(from var(--t007-toast-type-color) r g b/.2);
+  --t007-toast-progress-backdrop-background: rgb(from var(--t007-toast-type-color) r g b/0);
 }
 
 .t007-toast.info {
@@ -274,19 +288,16 @@
   overflow: hidden;
 }
 
-.t007-toast-image-wrapper:not(:has(.t007-toast-image), :has(.t007-toast-icon:not(:empty))) {
-  display: none;
-}
-
-.t007-toast:has(.t007-toast-image-wrapper:not(:has(.t007-toast-image))) {
-  gap: 0;
-}
-
 .t007-toast-image-wrapper:not(:has(.t007-toast-image)) {
   flex: 0 0 var(--t007-toast-icon-width);
   width: var(--t007-toast-icon-width);
   height: var(--t007-toast-icon-height);
   background: transparent;
+  margin-left: calc(var(--t007-toast-unit) / 5);
+}
+
+.t007-toast-image-wrapper:not(:has(.t007-toast-image), :has(.t007-toast-icon:not(:empty))) {
+  display: none;
 }
 
 .t007-toast-icon {
@@ -298,6 +309,10 @@
   align-items: center;
   font-size: var(--t007-toast-icon-font-size);
   line-height: var(--t007-toast-icon-line-height);
+}
+
+.t007-toast-icon:not(.t007-toast-loader) {
+  animation: t007-item-expand 300ms ease;
 }
 
 .t007-toast .t007-toast-icon > svg {
