--- a/T007_toast_library/T007_toast.css
+++ b/T007_toast_library/T007_toast.css
@@ -321,7 +321,9 @@
 }
 
 .t007-toast-image-wrapper .t007-toast-image {
+  min-height: 100%;
   height: 100%;
+  min-width: 100%;
   width: 100%;
   object-fit: cover;
 }
