--- a/T007_toast_library/T007_toast.css
+++ b/T007_toast_library/T007_toast.css
@@ -28,6 +28,7 @@
   --t007-toast-container-margin-bottom: calc(var(--t007-toast-unit) / 2);
   --t007-toast-container-margin-left: calc(var(--t007-toast-unit) / 2);
   --t007-toast-container-margin-right: calc(var(--t007-toast-unit) / 2);
+  --t007-toast-container-gap: calc(var(--t007-toast-unit) / 2);
   --t007-toast-min-width: unset;
   --t007-toast-width: calc(var(--t007-toast-unit) * 20);
   --t007-toast-max-width: 100%;
@@ -35,22 +36,18 @@
   --t007-toast-height: fit-content;
   --t007-toast-max-height: calc(var(--t007-toast-unit) * 8.5);
   --t007-toast-padding: calc(var(--t007-toast-unit) / 2.25);
+  --t007-toast-gap: var(--t007-toast-padding);
   --t007-toast-border-radius: calc(var(--t007-toast-unit) / 3);
   --t007-toast-progress-height: calc(var(--t007-toast-unit) / 5);
   --t007-toast-image-width: calc(var(--t007-toast-unit) * 3.5);
   --t007-toast-image-height: calc(var(--t007-toast-unit) * 3.5);
-  --t007-toast-image-border-radius: calc(var(--t007-toast-unit) / 5);
+  --t007-toast-image-border-radius: calc(var(--t007-toast-border-radius) - (var(--t007-toast-padding) / 2));
   --t007-toast-icon-width: calc(var(--t007-toast-unit) * 1.4);
   --t007-toast-icon-height: calc(var(--t007-toast-unit) * 1.4);
   --t007-toast-icon-font-size: calc(var(--t007-toast-icon-height) * 0.8);
   --t007-toast-font-size: calc(var(--t007-toast-unit) / 1.05);
   --t007-toast-font-weight: inherit;
   --t007-toast-x-size: calc(var(--t007-toast-unit) * 1.75);
-}
-
-:root,
-.t007-toast-container {
-  --t007-toast-container-flex-direction: column;
 }
 
 @keyframes t007-x-slide-bounce-in {
@@ -97,6 +94,28 @@
     transform: translateY(var(--t-from));
   }
 }
+@keyframes t007-fade-in {
+  from {
+    opacity: 0;
+  }
+}
+@keyframes t007-fade-out {
+  to {
+    opacity: 0;
+  }
+}
+@keyframes t007-zoom-in {
+  from {
+    transform: scale(0);
+    opacity: 0;
+  }
+}
+@keyframes t007-zoom-out {
+  to {
+    transform: scale(0);
+    opacity: 0;
+  }
+}
 @keyframes t007-item-expand {
   from {
     transform: scale(0);
@@ -119,39 +138,32 @@
   margin-left: var(--t007-toast-container-margin-left);
   margin-right: var(--t007-toast-container-margin-right);
   max-width: calc(100% - var(--t007-toast-container-margin-left) - var(--t007-toast-container-margin-right));
-  /* max-height: calc(100% - var(--t007-toast-container-margin-top) - var(--t007-toast-container-margin-bottom)); */
+  /* remove next block to clip container viewport, clips sliding too */
+  /* max-height: calc(100% - var(--t007-toast-container-margin-top) - var(--t007-toast-container-margin-bottom));
+  overflow: hidden; */
   display: flex;
-  flex-direction: var(--t007-toast-container-flex-direction);
-  gap: 0.5rem;
+  flex-direction: column;
+  gap: var(--t007-toast-container-gap);
   z-index: 2147483647;
-}
-
-.t007-toast-container.newest-on-top {
-  --t007-toast-container-flex-direction: column-reverse;
 }
 
 .t007-toast-container[data-position^="top-"] {
   top: 0;
 }
-
 .t007-toast-container[data-position^="bottom-"] {
   bottom: 0;
 }
-
 .t007-toast-container[data-position^="center-"] {
   top: 50%;
   transform: translateY(-50%);
   margin-block: 0;
 }
-
 .t007-toast-container[data-position$="-right"] {
   right: 0;
 }
-
 .t007-toast-container[data-position$="-left"] {
   left: 0;
 }
-
 .t007-toast-container[data-position$="-center"] {
   left: 50%;
   translate: -50%;
@@ -163,7 +175,7 @@
   flex-shrink: 0;
   display: flex;
   align-items: center;
-  gap: calc(var(--t007-toast-unit) / 2.5);
+  gap: var(--t007-toast-gap);
   min-width: var(--t007-toast-min-width);
   width: var(--t007-toast-width);
   max-width: var(--t007-toast-max-width);
@@ -184,57 +196,70 @@
   -webkit-backdrop-filter: blur(var(--t007-toast-background-blur));
   backdrop-filter: blur(var(--t007-toast-background-blur));
   overflow: hidden;
+  will-change: transform, opacity;
   transition:
     transform 300ms ease,
     opacity 300ms ease;
-  will-change: transform, opacity;
   animation-timing-function: var(--t007-toast-animation-timing-function);
   animation-fill-mode: forwards;
   animation-duration: var(--t007-toast-animation-duration);
-  animation-name: t007-x-slide-bounce-out;
   touch-action: none;
 }
 
 .t007-toast:is([data-pointer-type="mouse"], [data-pointer-type="true"]) {
   cursor: grab;
 }
-
 .t007-toast:is([data-pointer-type="mouse"], [data-pointer-type="true"]):active {
   cursor: grabbing;
 }
 
-.t007-toast.t007-toast-show {
-  animation-name: t007-x-slide-bounce-in;
-}
-
-.t007-toast-container[data-position$="-center"] .t007-toast {
-  animation-name: t007-y-slide-bounce-out;
-}
-
-.t007-toast-container[data-position$="-center"] .t007-toast.t007-toast-show {
-  animation-name: t007-y-slide-bounce-in;
-}
-
-.t007-toast {
-  --t-from: 100%;
-  --t-bounce: -0%;
+.t007-toast[data-animation^="slide"] {
   --t-to: 0;
 }
 
-.t007-toast-container[data-position$="-left"] .t007-toast {
+.t007-toast[data-animation="slide-left"] {
+  --t-from: 100%;
+  --t-bounce: -0%;
+}
+.t007-toast[data-animation="slide-right"] {
   --t-from: -100%;
   --t-bounce: 10%;
 }
-
-.t007-toast-container[data-position="top-center"] .t007-toast {
-  --t-from: -100%;
-  --t-bounce: 10%;
-}
-
-.t007-toast-container[data-position="bottom-center"] .t007-toast,
-.t007-toast-container[data-position="center-center"] .t007-toast {
+.t007-toast[data-animation="slide-up"] {
   --t-from: 100%;
   --t-bounce: -10%;
+}
+.t007-toast[data-animation="slide-down"] {
+  --t-from: -100%;
+  --t-bounce: 10%;
+}
+
+.t007-toast:is([data-animation="slide-left"], [data-animation="slide-right"]) {
+  animation-name: t007-x-slide-bounce-out;
+}
+.t007-toast:is([data-animation="slide-left"], [data-animation="slide-right"]).t007-toast-show {
+  animation-name: t007-x-slide-bounce-in;
+}
+
+.t007-toast:is([data-animation="slide-up"], [data-animation="slide-down"]) {
+  animation-name: t007-y-slide-bounce-out;
+}
+.t007-toast:is([data-animation="slide-up"], [data-animation="slide-down"]).t007-toast-show {
+  animation-name: t007-y-slide-bounce-in;
+}
+
+.t007-toast[data-animation="fade"] {
+  animation-name: t007-fade-out;
+}
+.t007-toast[data-animation="fade"].t007-toast-show {
+  animation-name: t007-fade-in;
+}
+
+.t007-toast[data-animation="zoom"] {
+  animation-name: t007-zoom-out;
+}
+.t007-toast[data-animation="zoom"].t007-toast-show {
+  animation-name: t007-zoom-in;
 }
 
 .t007-toast:is(.info, .success, .error, .warning) {
@@ -246,15 +271,12 @@
 .t007-toast.info {
   --t007-toast-type-color: var(--t007-toast-info-color);
 }
-
 .t007-toast.success {
   --t007-toast-type-color: var(--t007-toast-success-color);
 }
-
 .t007-toast.error {
   --t007-toast-type-color: var(--t007-toast-error-color);
 }
-
 .t007-toast.warning {
   --t007-toast-type-color: var(--t007-toast-warning-color);
 }
